--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,31 @@
-.App {
-  text-align: center;
-}
-
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+body {
+  /* text-align: center; */
+  background-color: #cbb6d8;
+  /* flex-direction: row; */
+  justify-content: center;
   display: flex;
-  flex-direction: column;
+  margin: 80px;
+}
+
+.ToDoList {
+  background-color: aliceblue;
+  width: 300px;
+  padding: 40px;
+  color: #797979;
+  box-shadow: 0 -3em 3em rgba(0, 0, 0, 0.1);
+}
+
+ul {
+  list-style-type: none;
+}
+
+.ToDoHeader {
+  background-color: #9f69d4;
+  color: white;
+  height: 3em;
+  margin-bottom: 10px;
+
+  display: flex;
   align-items: center;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
-}
-
-.App-link {
-  color: #61dafb;
-}
-
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
 }
